--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM gaetanlandreau/pytorch3d:v0.1.0
-RUN pip install debugpy easydict scikit-learn h5py pyyaml
+RUN pip install debugpy easydict scikit-learn h5py pyyaml parse
 RUN mkdir /workspace /runtime
