--- a/workspace/train/exps/train.yaml
+++ b/workspace/train/exps/train.yaml
@@ -11,13 +11,13 @@ data:
   train:
     dataset:
       params:
-        debug: true
+        debug: false
         placeholder: null
       # from_basic_blocks: datasets/shapenetpart/meshnet2/ssl_mae/train.yaml
     dataloader:
       collate_fn: __collate__
-      batch_size: 64
-      num_workers: 0
+      batch_size: 4
+      num_workers: 4
       drop_last: 0
   val: null
   test: null
@@ -27,7 +27,7 @@ model:
   name: modelnet40_meshnet2_ssl_mae
   params:
     en_config:
-      num_faces: 1024
+      num_faces: 8192
       num_cls: 40
       cfg: 
         num_kernel: 64
@@ -51,18 +51,18 @@ optim:
     # the author mentioned set weight decay to 0 is very 
     # important for completion task
     weight_decay: 0.0
-  scheduler:
-    name: StepLR
-    params:
-      # step_size: 20
-      gamma: 0.5
-    params:
-      lr: 0.0002
+  # scheduler:
+  #   name: StepLR
+  #   params:
+  #     # step_size: 20
+  #     gamma: 0.5
+  #   params:
+  #     lr: 0.0002
   scheduler:
     name: MultiStepLR
     params:
       milestones: [30, 60]
-      gamma: 0.1
+      gamma: 0.5
 train:
   # from_basic_blocks: trainers/modelnet40/meshnet2/ssl_rec_att.yaml
   max_epoch: 300
