--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
             },
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}/workspace",
+                    "localRoot": "${workspaceFolder}",
                     "remoteRoot": "/workspace/"
                 }
             ],
